--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
         <div class="follow-us-section">
           <h3 class="social-title">Follow us on:</h3>
           <div class="social-icons-wrapper">
-            <a class="social-link-icon" href="" target="_blank"><img src="img/Facebook.svg" alt="Facebook social button" /></a>
-            <a class="social-link-icon" href="" target="_blank"><img src="img/Instagram.svg" alt="Instagram social button" /></a>
-            <a class="social-link-icon" href="" target="_blank"><img src="img/Linkedin.svg" alt="LinkedIn social button" /></a>
+            <a class="social-link-icon" href="https://www.facebook.com/CareersAtDeloitteRomania/" target="_blank"><img src="img/Facebook.svg" alt="Facebook social button" /></a>
+            <a class="social-link-icon" href="https://www.instagram.com/deloitteromania/" target="_blank"><img src="img/Instagram.svg" alt="Instagram social button" /></a>
+            <a class="social-link-icon" href="https://www.linkedin.com/company/deloitte/posts/?feedView=all" target="_blank"><img src="img/Linkedin.svg" alt="LinkedIn social button" /></a>
           </div>
         </div>
       </div>
