--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <div class="intro-section-wrapper">
             <div class="intro-section-job">
               <h1 class="job-text"><span class="green nowrap">Junior Audit Analyst</span> <span class="nowrap">Career Opportunities</span> in our <span class="bold nowrap">Regional Audit Delivery Center</span> <span class="bold">(RADC | Deloitte)</span></h1>
-              <a href="#" target="_blank" class="discover-jobs bold">Discover job opportunities</a>
+              <a href="#jobs" class="discover-jobs bold">Discover job opportunities</a>
             </div>
             <a href="#info" class="intro-section-anchor">
               <span class="why-join bold">
@@ -94,7 +94,11 @@
           </div>
         </div>
         <!-- JOBS CTA -->
-        <div class="job-cta-wrapper">
+        <div class="job-cta-wrapper" id="jobs">
+          <h2 class="jobs-intro-text">
+            <span class="bold">Click on the buttons below for the complete job description!</span><br />
+            Take the 1st step in our Regional Audit Delivery Centre in Bucharest, practicing and improving one of the following language skills:
+          </h2>
           <!-- JOB BANNER -->
           <div class="job">
             <h2 class="job-title">Junior Audit Analyst with English</h2>
