--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="infographic-container" id="info">
           <div class="infographic-box career">
             <h2>The perfect place to <span class="bold">build a career</span></h2>
-            <p>Make your mark in a <span class="bold">leading organization</span>. Deloitte serves <span class="bold">4 out of 5 Fortune Global 500 companies</span> in over <span class="big">150</span> countries and territories, with over <span class="big">330,000 professionals</span> worldwide and over <span class="big">2,000</span> in Romania.</p>
+            <p>Make your mark in a <span class="bold">leading organization</span>. Deloitte serves <span class="bold">4 out of 5 Fortune Global 500 companies</span> in over <span class="big">150 countries</span> and territories, with <span class="big">over 330,000 professionals</span> worldwide and <span class="big">over 2,000</span> in Romania.</p>
             <p>Step into a <span class="bold">thriving environment</span>. Deloitte Romania was voted the <span class="bold">Most Desired Employer</span> in our country, in the Financial Services Industry, in the 2020 Catalyst survey.</p>
             <p>Pave your <span class="bold">career path</span>. <span class="bold">Half</span> of our colleagues got <span class="bold">promoted</span> during last year. Those who became <span class="bold">team leaders</span> earned this title after just <span class="bold">5 years</span> in our team.</p>
             <img class="svg-icon" src="img/briefcase_icon.svg" alt="svg-icon" />
