--- a/index.html
+++ b/index.html
@@ -88,22 +88,21 @@
             <div class="job-description-paragraph">
               <p class="green bold">To qualify for the role, you must first check the following:</p>
               <ul>
-                <li>University student or graduate of any faculty</li>
-                <li>Knowledge of English and the language you apply for (a B2 level);</li>
-                <li>Good analytical and communication skills;</li>
-                <li>Systematic approach to work and ability to prioritize workload under pressure;</li>
-                <li>Good command of the Microsoft Office package (mainly Excel and Word);</li>
+                <li><img src="img/circle-bullet.svg" alt="" class="bullet-img" /><span>University student or graduate of any faculty</span></li>
+                <li><img src="img/circle-bullet.svg" alt="" class="bullet-img" /><span>Knowledge of English and the language you apply for (a B2 level);</span></li>
+                <li><img src="img/circle-bullet.svg" alt="" class="bullet-img" /><span>Good analytical and communication skills;</span></li>
+                <li><img src="img/circle-bullet.svg" alt="" class="bullet-img" /><span>Systematic approach to work and ability to prioritize workload under pressure;</span></li>
+                <li><img src="img/circle-bullet.svg" alt="" class="bullet-img" /><span>Good command of the Microsoft Office package (mainly Excel and Word);</span></li>
               </ul>
-              <p class="green bold">Click on the buttons below for the complete job description!</p>
-              <p>Take the 1st step in our Regional Audit Delivery Centre in Bucharest, practicing and improving one of the following language skills:</p>
             </div>
           </div>
         </div>
         <!-- JOBS CTA -->
         <div class="job-cta-wrapper" id="jobs">
           <h2 class="jobs-intro-text">
-            <span class="bold">Click on the buttons below for the complete job description!</span><br />
-            Take the 1st step in our Regional Audit Delivery Centre in Bucharest, practicing and improving one of the following language skills:
+            <span class="h2-text"><span class="bold green">Click on the buttons below</span> for the complete job description!</span>
+            <span class="bold nowrap">Take the 1st step in our Regional Audit Delivery Centre in Bucharest</span>, <br />
+            practicing and improving one of the following language skills:
           </h2>
           <!-- JOB BANNER -->
           <div class="job">
