--- a/index.html
+++ b/index.html
@@ -44,34 +44,32 @@
         <div class="infographic-container" id="info">
           <div class="infographic-box career">
             <h2>The perfect place to <span class="bold">build a career</span></h2>
-            <p>Make your mark in a <span class="bold">leading organization</span>. Deloitte serves <span class="bold">4 out of 5 Fortune Global 500 companies</span> in over <span class="big">150 countries</span> and territories, with <span class="big">over 330,000 professionals</span> worldwide and <span class="big">over 2,000</span> in Romania.</p>
+            <p>Make your mark in a <span class="bold">leading organization</span>. Deloitte serves <span class="bold big">4 out of 5 Fortune Global 500 companies</span> in over 150 countries and territories, with over 330,000 professionals worldwide and over 2,000 in Romania.</p>
             <p>Step into a <span class="bold">thriving environment</span>. Deloitte Romania was voted the <span class="bold">Most Desired Employer</span> in our country, in the Financial Services Industry, in the 2020 Catalyst survey.</p>
-            <p>Pave your <span class="bold">career path</span>. <span class="bold">Half</span> of our colleagues got <span class="bold">promoted</span> during last year. Those who became <span class="bold">team leaders</span> earned this title after just <span class="bold">5 years</span> in our team.</p>
+            <p>Pave your <span class="bold">career path</span>. <span class="bold">Half</span> of our colleagues got <span class="bold big">promoted</span> during last year. You can become a <span class="bold big">team leader</span> after just <span class="bold">5 years</span>.</p>
             <img class="svg-icon" src="img/briefcase_icon.svg" alt="svg-icon" />
           </div>
           <div class="infographic-box recognition">
             <h2>Professional <span class="bold">recognition</span></h2>
-            <p>Advance based on <span class="bold">merit</span>. We base promotions on a clear set of <span class="bold">objectives</span> we agree upon at the beginning. We also have a monthly internal <span class="bold">reward program</span>.</p>
+            <p>Advance based on <span class="bold big">merit</span>. We base promotions on a clear set of <span class="bold">objectives</span> we agree upon at the beginning. We also have a monthly internal <span class="bold big">reward program</span>.</p>
             <img class="svg-icon" src="img/star_icon.svg" alt="svg-icon" />
           </div>
           <div class="infographic-box attention">
-            <h2><span class="bold">Attention</span></h2>
-            <p>Move <span class="bold">your feedback</span> forward. At RADC, we organize <span class="bold">Open Doors</span> Meetings, <span class="bold">All Staff</span> Meetings, <span class="bold">One to One</span> discussions and <span class="bold">HR Talks</span> for you to ask the questions you need. We also implement <span class="bold">Anonymous Surveys</span> periodically.</p>
+            <h2><span class="bold">Bidirectional</span> feedback</h2>
+            <p>Move <span class="bold big">your feedback</span> forward. At RADC, we organize <span class="bold">Open Doors</span> Meetings, <span class="bold">All Staff</span> Meetings, <span class="bold">One to One</span> discussions and <span class="bold">HR Talks</span> for you to ask the questions you need. We also implement <span class="bold">Anonymous Surveys</span> periodically.</p>
             <img class="svg-icon" src="img/heart_icon.svg" alt="svg-icon" />
           </div>
           <div class="infographic-box growth">
             <h2><span class="bold">Growth</span></h2>
-            <p>
-              Walk towards various <span class="bold">learning opportunities</span>. In 2020, we offered our people more than <span class="bold"><span class="big">52,000 hours</span> of trainings</span>.
-            </p>
-            <p><span class="bold">Escalate</span> in the directions you want to develop. We offer <span class="bold">ACCA</span> certifications, <span class="bold">language</span> trainings and <span class="bold">soft skills</span> trainings.</p>
+            <p>Walk towards various <span class="bold">learning opportunities</span>. In 2020, we offered our people more than <span class="bold">52,000 hours of trainings</span>.</p>
+            <p><span class="bold">Escalate</span> in the directions you want to develop. We offer <span class="bold big">ACCA</span> certifications, <span class="bold big">language</span> trainings and <span class="bold">soft skills</span> trainings.</p>
             <img class="svg-icon" src="img/globe_icon.svg" alt="svg-icon" />
           </div>
           <div class="infographic-box multi">
             <h2><span class="bold">Multicultural</span> community</h2>
             <p>
-              Step into a <span class="bold">friendly environment</span>. We have over <span class="big">400 auditor analysts</span>, <span class="bold">24 years-old</span> average age. <br />
-              Move freely through an <span class="bold">inclusive community</span>. More than <span class="bold">50% of our leaders are women</span>. <br />
+              Step into a <span class="bold">friendly environment</span>. We have over 400 auditor analysts, <span class="bold big">24 years-old</span> average age. <br />
+              Move freely through an <span class="bold big">inclusive community</span>. More than <span class="bold">50% of our leaders are women</span>. <br />
               Jump into a <span class="bold">multicultural environment</span>. We’ve reached a number or <span class="bold big">16 countries</span> in our client portfolio.
             </p>
             <img class="svg-icon" src="img/people_icon.svg" alt="svg-icon" />
@@ -89,7 +87,7 @@
               <p class="green bold">To qualify for the role, you must first check the following:</p>
               <ul>
                 <li><img src="img/circle-bullet.svg" alt="" class="bullet-img" /><span>University student or graduate of any faculty</span></li>
-                <li><img src="img/circle-bullet.svg" alt="" class="bullet-img" /><span>Knowledge of English and the language you apply for (a B2 level);</span></li>
+                <li><img src="img/circle-bullet.svg" alt="" class="bullet-img" /><span>Knowledge of English and the language you apply for;</span></li>
                 <li><img src="img/circle-bullet.svg" alt="" class="bullet-img" /><span>Good analytical and communication skills;</span></li>
                 <li><img src="img/circle-bullet.svg" alt="" class="bullet-img" /><span>Systematic approach to work and ability to prioritize workload under pressure;</span></li>
                 <li><img src="img/circle-bullet.svg" alt="" class="bullet-img" /><span>Good command of the Microsoft Office package (mainly Excel and Word);</span></li>
