--- a/index.html
+++ b/index.html
@@ -103,29 +103,58 @@
             practicing and improving one of the following language skills:
           </h2>
           <!-- JOB BANNER -->
-          <div class="job">
+          <div class="job desktop-link">
             <h2 class="job-title">Junior Audit Analyst with English</h2>
-            <a href="#" target="_blank" class="job-link english-link">It's THE job for me</a>
+            <a href="https://www.hipo.ro/locuri-de-munca/locuri_de_munca/161938" target="_blank" class="job-link english-link">It's THE job for me</a>
+          </div>
+          <div class="job mobile-link">
+            <h2 class="job-title">Junior Audit Analyst with English</h2>
+            <a href="https://www.hipo.ro/locuri-de-munca/locuri_de_munca/161938" target="_blank" class="job-link mob-english-link">It's THE job for me</a>
           </div>
           <!-- JOB BANNER -->
-          <div class="job">
+          <div class="job desktop-link">
+            <h2 class="job-title">Junior Project Support with English</h2>
+            <a href="https://www.hipo.ro/locuri-de-munca/locuri_de_munca/161944" target="_blank" class="job-link junior-english-link">It's THE job for me</a>
+          </div>
+          <div class="job mobile-link">
+            <h2 class="job-title">Junior Project Support with English</h2>
+            <a href="https://www.hipo.ro/locuri-de-munca/locuri_de_munca/161944" target="_blank" class="job-link mob-junior-english-link">It's THE job for me</a>
+          </div>
+          <!-- JOB BANNER -->
+          <div class="job desktop-link">
             <h2 class="job-title">Junior Audit Analyst with French</h2>
-            <a href="#" target="_blank" class="job-link french-link">C'est LE travail pour moi</a>
+            <a href="https://www.hipo.ro/locuri-de-munca/locuri_de_munca/161941" target="_blank" class="job-link french-link">C'est LE travail pour moi</a>
+          </div>
+          <div class="job mobile-link">
+            <h2 class="job-title">Junior Audit Analyst with French</h2>
+            <a href="https://www.hipo.ro/locuri-de-munca/locuri_de_munca/161941" target="_blank" class="job-link mob-french-link">C'est LE travail pour moi</a>
           </div>
           <!-- JOB BANNER -->
-          <div class="job">
+          <div class="job desktop-link">
             <h2 class="job-title">Junior Audit Analyst with German</h2>
-            <a href="#" target="_blank" class="job-link german-link">Es ist DER job für mich</a>
+            <a href="https://www.hipo.ro/locuri-de-munca/locuri_de_munca/161939" target="_blank" class="job-link german-link">Es ist DER job für mich</a>
+          </div>
+          <div class="job mobile-link">
+            <h2 class="job-title">Junior Audit Analyst with German</h2>
+            <a href="https://www.hipo.ro/locuri-de-munca/locuri_de_munca/161939" target="_blank" class="job-link mob-german-link">Es ist DER job für mich</a>
           </div>
           <!-- JOB BANNER -->
-          <div class="job">
+          <div class="job desktop-link">
             <h2 class="job-title">Junior Audit Analyst with Italian</h2>
-            <a href="#" target="_blank" class="job-link italian-link">È IL lavoro per me</a>
+            <a href="https://www.hipo.ro/locuri-de-munca/locuri_de_munca/161943" target="_blank" class="job-link italian-link">È IL lavoro per me</a>
+          </div>
+          <div class="job mobile-link">
+            <h2 class="job-title">Junior Audit Analyst with Italian</h2>
+            <a href="https://www.hipo.ro/locuri-de-munca/locuri_de_munca/161943" target="_blank" class="job-link mob-italian-link">È IL lavoro per me</a>
           </div>
           <!-- JOB BANNER -->
-          <div class="job">
+          <div class="job desktop-link">
             <h2 class="job-title">Junior Audit Analyst with Spanish</h2>
-            <a href="#" target="_blank" class="job-link italian-link">Es EL trabajo para mi </a>
+            <a href="https://www.hipo.ro/locuri-de-munca/locuri_de_munca/161942" target="_blank" class="job-link italian-link">Es EL trabajo para mi</a>
+          </div>
+          <div class="job mobile-link">
+            <h2 class="job-title">Junior Audit Analyst with Spanish</h2>
+            <a href="https://www.hipo.ro/locuri-de-munca/locuri_de_munca/161942" target="_blank" class="job-link mob-italian-link">Es EL trabajo para mi</a>
           </div>
         </div>
         <!-- FOLLOW US SECTION -->
