--- a/index.html
+++ b/index.html
@@ -5,27 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RADC Recruitment 2021</title>
-    <link rel="stylesheet" href="css/style.css" />
-    <script>
-      document.querySelectorAll('a[href^="#"]').forEach((anchor) => {
-        anchor.addEventListener("click", function (e) {
-          e.preventDefault();
-
-          document.querySelector(this.getAttribute("href")).scrollIntoView({
-            behavior: "smooth",
-          });
-        });
-      });
-    </script>
   </head>
   <body>
+    <!-- START CODE -->
+    <link rel="stylesheet" href="https://drive.google.com/uc?export=view&id=10zRv3iB_RgwyOjXs_cdv0mq7ASMGez44" />
+    <!-- <link rel="stylesheet" href="https://www2.deloitte.com/content/dam/html/ro/radc-recruit-2021/style.css" />
+    <link rel="stylesheet" href="css/style.css" /> -->
     <div class="radc-2021-wrapper">
       <div class="wrap-container">
         <!-- HEADER IMAGE -->
-        <img class="header-image" src="img/header_img.png" alt="hero image" />
+        <div class="header-section">
+          <div class="subheader">
+            <h2><span class="bold">AUDIT</span> <span class="green">DELIVERY CENTER</span></h2>
+          </div>
+          <!-- <img class="header-image" src="https://www2.deloitte.com/content/dam/html/ro/radc-recruit-2021/img/header-img-3.jpg" alt="hero image" /> -->
+          <img class="header-image" src="https://www2.deloitte.com/content/dam/html/ro/radc-recruit-2021/img/header-round.jpg" alt="hero image" />
+          <div class="subheader bottom">
+            <h2>
+              <span class="bold green">Take the 1st steps</span> <br />
+              into an auditor's shoes
+            </h2>
+            <h2 class="nowrap">Start at <span class="bold">RADC!</span></h2>
+          </div>
+        </div>
         <!-- INTRO SECTION -->
         <div class="intro-section">
-          <img src="img/miss-out.png" alt="" id="miss-out" />
+          <img src="https://www2.deloitte.com/content/dam/html/ro/radc-recruit-2021/img/miss-out.png" alt="" id="miss-out" />
           <div class="intro-section-wrapper">
             <div class="intro-section-job">
               <h1 class="job-text"><span class="green nowrap">Junior Audit Analyst</span> <span class="nowrap">Career Opportunities</span> in our <span class="bold nowrap">Regional Audit Delivery Center</span> <span class="bold">(RADC | Deloitte)</span></h1>
@@ -45,25 +50,25 @@
           <div class="infographic-box career">
             <h2>The perfect place to <span class="bold">build a career</span></h2>
             <p>Make your mark in a <span class="bold">leading organization</span>. Deloitte serves <span class="bold big">4 out of 5 Fortune Global 500 companies</span> in over 150 countries and territories, with over 330,000 professionals worldwide and over 2,000 in Romania.</p>
-            <p>Step into a <span class="bold">thriving environment</span>. Deloitte Romania was voted the <span class="bold">Most Desired Employer</span> in our country, in the Financial Services Industry, in the 2020 Catalyst survey.</p>
+            <p>Step into a <span class="bold">thriving environment</span>. Deloitte Romania was voted the <span class="bold">Most Desired Employer</span> in our country, in the Financial Services Industry, in the 2019, 2020 & 2021 Catalyst surveys.</p>
             <p>Pave your <span class="bold">career path</span>. <span class="bold">Half</span> of our colleagues got <span class="bold big">promoted</span> during last year. You can become a <span class="bold big">team leader</span> after just <span class="bold">5 years</span>.</p>
-            <img class="svg-icon" src="img/briefcase_icon.svg" alt="svg-icon" />
+            <img class="svg-icon" src="https://www2.deloitte.com/content/dam/html/ro/radc-recruit-2021/img/briefcase_icon.svg" alt="svg-icon" />
           </div>
           <div class="infographic-box recognition">
             <h2>Professional <span class="bold">recognition</span></h2>
             <p>Advance based on <span class="bold big">merit</span>. We base promotions on a clear set of <span class="bold">objectives</span> we agree upon at the beginning. We also have a monthly internal <span class="bold big">reward program</span>.</p>
-            <img class="svg-icon" src="img/star_icon.svg" alt="svg-icon" />
+            <img class="svg-icon" src="https://www2.deloitte.com/content/dam/html/ro/radc-recruit-2021/img/star_icon.svg" alt="svg-icon" />
           </div>
           <div class="infographic-box attention">
             <h2><span class="bold">Bidirectional</span> feedback</h2>
             <p>Move <span class="bold big">your feedback</span> forward. At RADC, we organize <span class="bold">Open Doors</span> Meetings, <span class="bold">All Staff</span> Meetings, <span class="bold">One to One</span> discussions and <span class="bold">HR Talks</span> for you to ask the questions you need. We also implement <span class="bold">Anonymous Surveys</span> periodically.</p>
-            <img class="svg-icon" src="img/heart_icon.svg" alt="svg-icon" />
+            <img class="svg-icon" src="https://www2.deloitte.com/content/dam/html/ro/radc-recruit-2021/img/heart_icon.svg" alt="svg-icon" />
           </div>
           <div class="infographic-box growth">
             <h2><span class="bold">Growth</span></h2>
             <p>Walk towards various <span class="bold">learning opportunities</span>. In 2020, we offered our people more than <span class="bold">52,000 hours of trainings</span>.</p>
             <p><span class="bold">Escalate</span> in the directions you want to develop. We offer <span class="bold big">ACCA</span> certifications, <span class="bold big">language</span> trainings and <span class="bold">soft skills</span> trainings.</p>
-            <img class="svg-icon" src="img/globe_icon.svg" alt="svg-icon" />
+            <img class="svg-icon" src="https://www2.deloitte.com/content/dam/html/ro/radc-recruit-2021/img/globe_icon.svg" alt="svg-icon" />
           </div>
           <div class="infographic-box multi">
             <h2><span class="bold">Multicultural</span> community</h2>
@@ -72,12 +77,12 @@
               Move freely through an <span class="bold big">inclusive community</span>. More than <span class="bold">50% of our leaders are women</span>. <br />
               Jump into a <span class="bold">multicultural environment</span>. We’ve reached a number or <span class="bold big">16 countries</span> in our client portfolio.
             </p>
-            <img class="svg-icon" src="img/people_icon.svg" alt="svg-icon" />
+            <img class="svg-icon" src="https://www2.deloitte.com/content/dam/html/ro/radc-recruit-2021/img/people_icon.svg" alt="svg-icon" />
           </div>
         </div>
         <!-- JOB DESCRIPTION -->
         <div class="job-description-wrapper">
-          <img src="img/description.png" alt="" id="job-description" />
+          <img src="https://www2.deloitte.com/content/dam/html/ro/radc-recruit-2021/img/description.png" alt="" id="job-description" />
           <div class="job-description-content">
             <div class="job-description-paragraph">
               <p>As a <span class="bold">JUNIOR AUDIT ANALYST</span>, you will be part of an international team, supporting one of our Deloitte member firms from over 16 countries: <span class="green">Belgium, Canada (French), Central Europe, Cyprus, Denmark, France, Germany, Ireland, Italy, Middle-East, Spain, Switzerland, UK, Norway, Sweden, Luxembourg.</span></p>
@@ -86,11 +91,11 @@
             <div class="job-description-paragraph">
               <p class="green bold">To qualify for the role, you must first check the following:</p>
               <ul>
-                <li><img src="img/circle-bullet.svg" alt="" class="bullet-img" /><span>University student or graduate of any faculty</span></li>
-                <li><img src="img/circle-bullet.svg" alt="" class="bullet-img" /><span>Knowledge of English and the language you apply for;</span></li>
-                <li><img src="img/circle-bullet.svg" alt="" class="bullet-img" /><span>Good analytical and communication skills;</span></li>
-                <li><img src="img/circle-bullet.svg" alt="" class="bullet-img" /><span>Systematic approach to work and ability to prioritize workload under pressure;</span></li>
-                <li><img src="img/circle-bullet.svg" alt="" class="bullet-img" /><span>Good command of the Microsoft Office package (mainly Excel and Word);</span></li>
+                <li><img src="https://www2.deloitte.com/content/dam/html/ro/radc-recruit-2021/img/circle-bullet.svg" alt="" class="bullet-img" /><span>University student or graduate of any faculty</span></li>
+                <li><img src="https://www2.deloitte.com/content/dam/html/ro/radc-recruit-2021/img/circle-bullet.svg" alt="" class="bullet-img" /><span>Knowledge of English and the language you apply for;</span></li>
+                <li><img src="https://www2.deloitte.com/content/dam/html/ro/radc-recruit-2021/img/circle-bullet.svg" alt="" class="bullet-img" /><span>Good analytical and communication skills;</span></li>
+                <li><img src="https://www2.deloitte.com/content/dam/html/ro/radc-recruit-2021/img/circle-bullet.svg" alt="" class="bullet-img" /><span>Systematic approach to work and ability to prioritize workload under pressure;</span></li>
+                <li><img src="https://www2.deloitte.com/content/dam/html/ro/radc-recruit-2021/img/circle-bullet.svg" alt="" class="bullet-img" /><span>Good command of the Microsoft Office package (mainly Excel and Word);</span></li>
               </ul>
             </div>
           </div>
@@ -150,23 +155,35 @@
           <!-- JOB BANNER -->
           <div class="job desktop-link">
             <h2 class="job-title">Junior Audit Analyst with Spanish</h2>
-            <a href="https://www.hipo.ro/locuri-de-munca/locuri_de_munca/161942" target="_blank" class="job-link italian-link">Es EL trabajo para mi</a>
+            <a href="https://www.hipo.ro/locuri-de-munca/locuri_de_munca/161942" target="_blank" class="job-link spanish-link">Es EL trabajo para mi</a>
           </div>
           <div class="job mobile-link">
             <h2 class="job-title">Junior Audit Analyst with Spanish</h2>
-            <a href="https://www.hipo.ro/locuri-de-munca/locuri_de_munca/161942" target="_blank" class="job-link mob-italian-link">Es EL trabajo para mi</a>
+            <a href="https://www.hipo.ro/locuri-de-munca/locuri_de_munca/161942" target="_blank" class="job-link mob-spanish-link">Es EL trabajo para mi</a>
           </div>
         </div>
         <!-- FOLLOW US SECTION -->
         <div class="follow-us-section">
           <h3 class="social-title">Follow us on:</h3>
           <div class="social-icons-wrapper">
-            <a class="social-link-icon" href="https://www.facebook.com/CareersAtDeloitteRomania/" target="_blank"><img src="img/Facebook.svg" alt="Facebook social button" /></a>
-            <a class="social-link-icon" href="https://www.instagram.com/deloitteromania/" target="_blank"><img src="img/Instagram.svg" alt="Instagram social button" /></a>
-            <a class="social-link-icon" href="https://www.linkedin.com/company/deloitte/posts/?feedView=all" target="_blank"><img src="img/Linkedin.svg" alt="LinkedIn social button" /></a>
+            <a class="social-link-icon" href="https://www.facebook.com/CareersAtDeloitteRomania/" target="_blank"><img src="https://www2.deloitte.com/content/dam/html/ro/radc-recruit-2021/img/Facebook.svg" alt="Facebook social button" /></a>
+            <a class="social-link-icon" href="https://www.instagram.com/deloitteromania/" target="_blank"><img src="https://www2.deloitte.com/content/dam/html/ro/radc-recruit-2021/img/Instagram.svg" alt="Instagram social button" /></a>
+            <a class="social-link-icon" href="https://www.linkedin.com/company/deloitte/posts/?feedView=all" target="_blank"><img src="https://www2.deloitte.com/content/dam/html/ro/radc-recruit-2021/img/Linkedin.svg" alt="LinkedIn social button" /></a>
           </div>
         </div>
       </div>
     </div>
+    <script>
+      document.querySelectorAll('a[href^="#"]').forEach((anchor) => {
+        anchor.addEventListener("click", function (e) {
+          e.preventDefault();
+
+          document.querySelector(this.getAttribute("href")).scrollIntoView({
+            behavior: "smooth",
+          });
+        });
+      });
+    </script>
+    <!-- END CODE -->
   </body>
 </html>
